# hackathon-ii-phase-i-todo-app

./: .gitignore  .vercelignore  AUTO_DEPLOY_NOW.md  CORS_FIX_FOR_VERCEL.md  DEPLOYMENT.md  DEPLOYMENT_ASSISTANT.md  DEPLOY_NOW.md  DEPLOY_NOW_STEPS.md  DEPLOY_QUICK_REFERENCE.md  DEPLOY_WITH_CLI.md  FINAL_VERCEL_FIX.md  GITHUB_AUTO_DEPLOY_GUIDE.md  KOYEB_DEPLOYMENT_GUIDE.md  MANUAL_VERCEL_DEPLOY.md  PHASE_II_COMPLETE.md  PHASE_II_SUMMARY.md  PYTHONANYWHERE_DEPLOYMENT.md  QUICK_AUTH_STEPS.md  QUICK_DEPLOY.md  RAILWAY_ENV_VARS.txt  RAILWAY_FIX_STEPS.md  README.md  RENDER_DEPLOY.md  START_HERE_DEPLOYMENT.md  TESTING_CHECKLIST.md  VERCEL_CONFIG_CHECK.md  VERCEL_DEPLOYMENT_FIX.md  VERCEL_DEPLOY_GUIDE.md  VERCEL_ENV_VARS.txt  VERCEL_LIMIT_FIX.md  VERCEL_QUICK_START.md  build.sh  install.sh  package-lock.json  package.json  pyproject.toml  test-local.md  tsconfig.json  vercel.json
.github/workflows/: test.yml
.specify/memory/: constitution.md
app/: layout.tsx
app/login/: page.tsx
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  main.py  nixpacks.toml  railway.toml  requirements.txt  test_jwt.py
backend/alembic/: env.py
backend/app/: auth.py  config.py  database.py  models.py
docs/: index.html
frontend/: CLAUDE.md  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
frontend/app/: page.tsx
specs/master/: data-model.md  quickstart.md  research.md
specs/phase-i-console-app/: spec.md
specs/phase-ii-web-app/: plan.md  (+2 more)
src/: __init__.py  cli.py  main.py  models.py  task_manager.py
(+9 files in other folders)
