[project]
name = "hackaton-ii-todo-console"
version = "1.0.0"
description = "Todo In-Memory Python Console App (Phase I) - Hackathon II"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "J.I TRADERS"}
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
todo = "src.main:main"
